<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mnet.antivirus.help_fragments$helpFragmentOne"
    android:weightSum="1"
    android:columnCount="5"
    android:rowCount="15">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/help_four_title"
        android:id="@+id/help_four_title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/help_resurrection"
        android:src="@drawable/resurrection"
        android:layout_above="@+id/help_four_resurrection_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/help_four_resurrection"
        android:id="@+id/help_four_resurrection_name"
        android:layout_above="@+id/help_four_four_resurrection_body"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/help_four_resurrection_body"
        android:id="@+id/help_four_four_resurrection_body"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="39dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/help_antivirus"
        android:src="@drawable/antivirus"
        android:layout_below="@+id/space"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/help_four_antivirus"
        android:id="@+id/help_four_antivirus_name"
        android:layout_below="@+id/help_antivirus"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="63dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/help_four_antivirus_body"
        android:id="@+id/help_four_antivirus_body"
        android:layout_below="@+id/help_four_antivirus_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/help_destroyer"
        android:src="@drawable/destroyer"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/help_four_destroyer_name"
        android:layout_alignEnd="@+id/help_four_destroyer_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/help_four_destroyer"
        android:id="@+id/help_four_destroyer_name"
        android:layout_below="@+id/help_destroyer"
        android:layout_alignRight="@+id/help_four_destroyer_body"
        android:layout_alignEnd="@+id/help_four_destroyer_body" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/help_four_destroyer_body"
        android:id="@+id/help_four_destroyer_body"
        android:gravity="right"
        android:layout_below="@+id/help_four_destroyer_name"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Space
        android:layout_width="20dp"
        android:layout_height="40dp"
        android:id="@+id/space"
        android:layout_alignRight="@+id/help_four_title"
        android:layout_alignEnd="@+id/help_four_title"
        android:layout_below="@+id/help_four_title"
        android:layout_alignLeft="@+id/help_four_title"
        android:layout_alignStart="@+id/help_four_title" />

</RelativeLayout>